<resources>
    <string name="app_name">Bitotsav \'19</string>
    <string name="app_version">1.1.0</string>
    <string name="app_url_play_store">https://play.google.com/store/apps/details?id=in.bitotsav</string>
    <string name="desc_subscribe">Subscribe to alerts</string>
    <string name="desc_event_description">Hide or show description</string>
    <string name="desc_share_feed_message">Share</string>
    <string name="desc_bit_logo">BIT Mesra</string>
    <string name="event_details_short">%s • %s</string>
    <string name="schedule_title">Schedule</string>
    <string name="info_title">Info</string>
    <string name="feed_title">Updates</string>
    <string name="profile_title">Profile</string>
    <string name="filters_label_sheet_title">Filters</string>
    <string name="filters_label_clear_all">Clear All</string>
    <string name="filters_label_starred">Starred Only</string>
    <string name="login_label_email">Email</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_login">Login</string>
    <string name="login_label_register">Register</string>
    <string name="registration_title">Registration</string>
    <string name="registration_label_name">Name</string>
    <string name="registration_label_phone">
        Phone No <small><small>(For First OTP)</small></small>
    </string>
    <string name="registration_label_email">
        Email <small><small>(For Second OTP)</small></small>
    </string>
    <string name="registration_label_password">Password</string>
    <string name="registration_label_next_step_one">Get OTPs</string>
    <string name="registration_label_phoneOtp">Phone OTP</string>
    <string name="registration_label_emailOtp">Email OTP</string>
    <string name="registration_label_next_step_two">Verify</string>
    <string name="registration_label_gender">Gender</string>
    <string name="registration_label_college">College</string>
    <string name="registration_label_year">Year</string>
    <string name="registration_label_rollNo">Roll No</string>
    <string name="registration_label_source">Source</string>
    <string name="registration_label_next_step_three">Finish</string>
    <string name="event_label_description">Description</string>
    <string name="event_label_rules">Rules</string>
    <string name="event_label_status">Status</string>
    <string name="event_label_time">Time</string>
    <string name="event_label_venue">Venue</string>
    <string name="event_label_contact">Contact</string>
    <string name="event_label_result">Result</string>
    <string name="event_label_category">Category</string>
    <string name="event_label_team_size">Team Size</string>
    <string name="event_label_prizes">Up For Grabs</string>
    <string name="event_label_rank1">1st</string>
    <string name="event_label_rank2">2nd</string>
    <string name="event_label_rank3">3rd</string>
    <string name="event_placeholder_tba">TBA</string>
    <string name="event_placeholder_tba_long">To Be Announced</string>
    <string name="event_placeholder_no_coordinators">Contact events team.</string>
    <string name="event_format_time">%1$s (Day %2$d)</string>
    <string name="event_format_time_venue">%1$s • %2$s</string>
    <string name="event_format_team_size">%1$d - %2$d</string>
    <string name="event_format_prize">Prizes worth ₹%,d</string>
    <string name="event_format_points">%,d Championship Points</string>
    <string name="event_format_leader_name">%s\'s Team</string>
    <string name="event_format_share_title">Share %s with</string>
    <string name="event_format_share_text">
        Have you heard about %1$s? Check it out! #bitotsav_19 #colours_of_asia\n%2$s
    </string>
    <string name="event_label_register">Register</string>
    <string name="event_label_deregister">Deregister</string>
    <string name="event_format_registration_message">See you at %s 🎉</string>
    <string name="event_format_deregistration_message">Abandoned %s 😢</string>
    <string name="team_registration_label_format_title">%s Registration</string>
    <string name="team_registration_label_format_email">Member %d Email</string>
    <string name="team_registration_label_format_bitotsav_id">
        Member %d Bitotsav Id (BT19/*****)
    </string>
    <string name="event_team_registration_label_member_count">Select Member Count</string>
    <string name="event_team_registration_label_register">Register</string>
    <string name="championship_team_registration_label_team_name">Team Name</string>
    <string name="championship_team_registration_label_register">Register</string>
    <string name="profile_label_format_title">Hi %s !</string>
    <string name="profile_label_bitotsav_credentials">Your Bitotsav Details</string>
    <string name="profile_label_bitotsav_id">Bitotsav ID</string>
    <string name="profile_label_email">Registered Email</string>
    <string name="profile_label_night1">Night 1</string>
    <string name="profile_label_night2">Night 2</string>
    <string name="profile_label_night3">Night 3</string>
    <string name="profile_info_nights">
        Students of BIT Mesra: Visit 192.168.101.17:8080 from local network to verify.\n\n
        Others: Collect your night passes from the info desk.
    </string>
    <string name="profile_label_merchandise">Merchandise</string>
    <string name="profile_info_merchandise">
        Pay for and collect merchandise at the info desk.
    </string>
    <string name="profile_label_accommodation">Accommodation</string>
    <string name="profile_info_accommodation">
        Report at info desk to get accommodation details.
    </string>
    <string name="profile_verification_done">Confirmed</string>
    <string name="profile_verification_pending"><u>Pending: Pay/Verify</u></string>
    <string name="profile_label_register">Register for Championship</string>
    <string name="profile_label_championship_team">Championship Team</string>
    <string name="profile_label_championship_score">Championship Score</string>
    <string name="profile_label_registrations">Event Registrations</string>
    <string name="profile_label_logout">Logout</string>
    <string name="profile_format_registration_message">
        Welcome to the Championship, %s 🎉
    </string>
    <string name="feed_format_share_title">Share Update (%s)</string>
    <string name="feed_format_share_text">%s \n#bitotsav_19 #colours_of_asia</string>
    <string name="info_title_bitotsav_bit">Bitotsav</string>
    <string name="info_title_contact">Contact Us</string>
    <string name="info_title_about_app">About App</string>
    <string name="info_bitotsav_bitotsav_19_label">Bitotsav 19</string>
    <string name="info_bitotsav_bitotsav_19_content">
        Deemed as an institute of national importance, Birla Institute of Technology, Mesra,
        is one of the country\'s most honourable and distinguished educational university.
        It was founded and established by the visionary industrialist, B.M. Birla over more
        than six decades ago, and has been creating waves of success ever since. The massive
        850 acre campus has been home to diverse cultures, multitudinous talent, and
        inspiring leaders.\n\n

        BIT Mesra has not only produced some of the finest technocrats in the country, but
        has also churned out winners in professions as diverse as music, art, and
        literature. Our annual cultural extravaganza, BITOTSAV, is an affluent celebration
        of the rich cultural heritage that resides in our country, and an attempt to revel
        in the euphoric essence of India\'s cultural potency. BITOTSAV has a plethora of
        events to realize its cause of bringing students from all spheres and from all
        places, together, to enjoy culture while supporting something of societal
        importance. As the grandeur of BITOTSAV keeps on growing, this year\'s BITOTSAV is
        set to be majestic: bigger and better than ever before. With enthralling events,
        mesmerizing nights, enticing performances by prominent celebrities and a whole lot
        of dance and music, we welcome you to BITOTSAV19.
    </string>
    <string name="info_bitotsav_theme_label">Theme: Colours Of Asia</string>
    <string name="info_about_label_credits">Credits</string>
    <string name="info_about_credit1_name">Nithash Majumdar</string>
    <string name="info_about_credit1_role">App Testing &amp; Bug Hunting</string>
    <string name="info_about_credit3_name">App Killer Manager</string>
    <string name="info_about_credit3_role">
        Copyright © 2019 thelittlefireman\n
        https://github.com/thelittlefireman/AppKillerManager
    </string>
    <string name="info_about_credit4_name">Smart App Rate</string>
    <string name="info_about_credit4_role">
        <![CDATA[Copyright © 2016 Code My Brains Out
        https://github.com/codemybrainsout/smart-app-rate

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
        ]]>
    </string>
    <string name="info_about_credit5_name">Source Sans Pro</string>
    <string name="info_about_credit5_role">
<![CDATA[
        This Font Software is licensed under the SIL Open Font License, Version 1.1.
This license is available with a FAQ at: http://scripts.sil.org/OFL
]]></string>
    <string name="info_about_credit6_name">Eva Icons</string>
    <string name="info_about_credit6_role">
        <![CDATA[Copyright © Akveo Team akveo.com
        https://github.com/akveo/eva-icons

        MIT License

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
        ]]>
    </string>
</resources>